--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
     </nav>
     <header>
-        <h1>Ontdek jouw Weg met de Kieswijzer</h1>
+        <h1>Ontdek jouw weg met de Kieswijzer</h1>
         <p>Maak de juiste keuze op basis van jouw behoeften en voorkeuren</p>
     </header>
 
